# Flavortown-Desktop-App

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  release.yml
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ApiKeySetup.tsx  Sidebar.tsx
src/lib/: api.ts  cache.ts  i18n.tsx  icons.ts  openExternal.ts  useTheme.ts
src/pages/: ApiPages.tsx  Kitchen.tsx  Settings.tsx
