[package]
name = "flavortown-desktop-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# Cargo manifest reference: https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may look redundant, but it keeps the library name unique and avoids conflicts with the binary name.
# This appears to matter only on Windows; see https://github.com/rust-lang/cargo/issues/8519
name = "flavortown_desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
