[package]
name = "flavortown-desktop-app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# Cargo manifest reference: https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may look redundant, but it keeps the library name unique and avoids conflicts with the binary name.
# This appears to matter only on Windows; see https://github.com/rust-lang/cargo/issues/8519
name = "flavortown_desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
# Tauri v2 still uses the GTK3 stack (`gtk` 0.18), which cannot resolve
# `glib` 0.20 yet. This local patch keeps the 0.18 API and backports
# GHSA-wrw7-89jp-8q8g's upstream `VariantStrIter::impl_get` fix.
glib = { path = "vendor/glib-0.18.5" }
# `selectors` 0.24 still pulls `phf_generator` 0.8, whose published crate
# depends on vulnerable `rand` 0.7. The crate API compiles cleanly with
# `rand` 0.8.6, so patch only that build-time dependency.
phf_generator = { path = "vendor/phf_generator-0.8.0" }
